[gd_scene load_steps=9 format=2]

[ext_resource path="res://DungeonGenerator/EntryExit.png" type="Texture" id=1]
[ext_resource path="res://DungeonGenerator/DungeonGenerator.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://DungeonGenerator/RoomType/V_HallwayRoom.tres" type="Resource" id=4]
[ext_resource path="res://DungeonGenerator/RoomType/SingleCellRoom.tres" type="Resource" id=5]
[ext_resource path="res://DungeonGenerator/RoomType/H_HallwayRoom.tres" type="Resource" id=6]
[ext_resource path="res://DungeonGenerator/RoomType/SquareRoom.tres" type="Resource" id=7]

[sub_resource type="TileSet" id=1]
0/name = "icon.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Entry"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Exit"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 64, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[node name="DungeonGenerator" type="Node2D"]
script = ExtResource( 2 )
delay_btw_steps = 0.0
room_types = [ ExtResource( 7 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 5 ) ]

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 0.5, 0.5 )
tile_set = SubResource( 1 )
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="CellDistances" type="Control" parent="."]

[node name="EntryExitCells" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Rooms" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
